Issue fix. Front end updates.

--- a/webapp/views/index.html
+++ b/webapp/views/index.html
@@ -66,11 +66,10 @@
   <!-- Home Section Desgin  -->
   <section class="home" id="home">
     <div class="home-content">
-      <h1> <span style="color: black; font-weight: 700;">Zero</span> knowledge, <span style="color: black; font-weight: 700;">maximum</span> impact.</h1>
 
+      <h1 style="color: black; font-weight: 600;">Zero <span style="font-weight: 500; color: black;">knowledge,</span> maximum <span style="font-weight: 500; color: black;">impact.</span> </h1> 
 
-      
-        <h1><span style="font-family: Montserrat; font-weight: 1000;">ZKDonation</span> is <span class="multiple-text" style="font-family: Montserrat; font-weight: 400;"></span></h1>
+        <h1 style="font-weight: 500;"><span style="font-family: Montserrat; font-weight: 600;">ZKDonation</span> is <span class="multiple-text" style="font-family: Montserrat; font-weight: 400;"></span></h1>
 
       <p>
          ZKDonation is a revolutionary zero knowledge proof based donation application designed to enhance the security and privacy of charitable contributions.
@@ -88,7 +87,7 @@
 
 
     <div class="home-img">
-      <img src="./images/home.jpeg" alt="">
+      <img src="./images/person-donating.png" alt="">
     </div>
   </section>
 
