--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
 
 * {
     margin: 0;
@@ -15,7 +17,7 @@
 .cursor{
     z-index: 999;
     position: fixed;
-    background: #00d9ff;
+    background: rgb(0, 174, 255);;
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -52,7 +54,7 @@
     --bg-color: #ffffff;
     --second-bg-color: #f1f1f1;
     --text-color: hsl(0, 0%, 11%);
-    --main-color: rgb(0, 195, 255);
+    --main-color: rgb(0, 174, 255);;
 }
 
 html {
@@ -80,7 +82,7 @@ section {
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background: var(--bg-color);
+    background: white;
     display: flex;
     justify-content: space-between;
     z-index: 100;
@@ -92,11 +94,13 @@ section {
 }
 
 .logo {
-    font-size: 2.5rem;
+    font-size: 3rem;
     color: var(--text-color);
-    font-weight: 600;
+    font-weight: bolder;
     cursor: default;
+    padding-right: 10rem;
 }
+
 
 
 .navbar a {
@@ -125,13 +129,14 @@ section {
 /* Home Start  */
 .home {
     display: flex;
-    justify-content: center;
     align-items: center;
+    padding-left: auto;
+    padding-right: auto;
 }
 
 .home-img img {
-    margin-left: 15rem;
-    width: 30rem;
+    margin: auto;
+    width: 60rem;
     animation: floatImage 4s ease-in-out infinite;
     align-items: center;
 
@@ -151,7 +156,7 @@ section {
 }
 
 .home-content h3 {
-    font-size: 3.2rem;
+    font-size: 3rem;
     font-weight: 700;
 }
 
@@ -164,9 +169,13 @@ span {
 }
 
 .home-content h1 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     font-size: 5.6rem;
-    font-weight: 700;
+    font-weight: 500;
     line-height: 1.3;
+
 }
 
 .home-content p {
@@ -186,7 +195,7 @@ span {
     border-radius: 50%;
     font-size: 2.5rem;
     color: var(--main-color);
-    margin: 0.8rem 2.2rem 2rem 0;
+    margin: 1rem 2.2rem 3rem 0;
     transition: 0.5 ease;
 }
 
@@ -201,7 +210,8 @@ span {
 .btn {
     display: inline-block;
     padding: 1.5rem 4rem;
-    background: var(--main-color);
+    background: rgb(0,151,238);
+    background: linear-gradient(90deg, rgba(0,151,238,1) 0%, rgba(0,154,237,1) 50%, rgba(0,191,255,1) 100%);
     border-radius: 4rem;
     box-shadow: 0 0 1rem var(--main-color);
     font-size: 2rem;
@@ -210,6 +220,8 @@ span {
     font-weight: 600;
     transition: 0.5 ease;
 }
+
+
 
 
 .btn:hover {
