General front end style change. Color and interface change. Contact part erase.

--- a/webapp/views/index.html
+++ b/webapp/views/index.html
@@ -55,7 +55,7 @@
     <i class="bx bx-menu" id="menu_icon"></i>
 
     <nav class="navbar">
-      <a href="#home" class="active">Home</a>
+      <a href="#home" class="active" >Home</a>
       <a href="#about">About Us</a>
       <a href="#services">Donate</a>
       <a href="#portfolio">FAQ</a>
@@ -69,7 +69,7 @@
 
       <h1 style="color: black; font-weight: 600;">Zero <span style="font-weight: 500; color: black;">knowledge,</span> maximum <span style="font-weight: 500; color: black;">impact.</span> </h1> 
 
-        <h1 style="font-weight: 500;"><span style="font-family: Montserrat; font-weight: 600;">ZKDonation</span> is <span class="multiple-text" style="font-family: Montserrat; font-weight: 400;"></span></h1>
+        <h1 style="font-weight: 500;"><span style="font-family: Montserrat; font-weight: 600;" >ZKDonation</span> is <span class="multiple-text" style="font-family: Montserrat; font-weight: 400;"></span></h1>
 
       <p>
          ZKDonation is a revolutionary zero knowledge proof based donation application designed to enhance the security and privacy of charitable contributions.
@@ -85,7 +85,6 @@
 
 
 
-
     <div class="home-img">
       <img src="./images/person-donating.png" alt="">
     </div>
@@ -97,8 +96,8 @@
       <img src="./images/about.jpeg" alt="">
     </div>
     <div class="about-content">
-      <h2 class="heading">About <span>Me</span></h2>
-      <h3>ZK Donation !</h3>
+      <h2 class="heading">About <span>Us</span></h2>
+      <h3 style="color: var(--main-color)">ZK Donation</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos laudantium quae quis voluptates eum
         dolorum veniam quaerat iste, eligendi eius accusamus fuga id itaque nihil perspiciatis iure? Facilis,
         quidem sed?</p>
@@ -151,8 +150,8 @@
       <div class="portfolio-box">
         <img src="./images/portfolio1.jpg" alt="">
         <div class="portfolio-layer">
-          <h4>Web Desgin</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
+          <h4 style="color:var(--bg-color);">Web Desgin</h4>
+          <p style="color:var(--bg-color);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
             nam.</p>
           <a href="#"><i class='bx bx-link-external'></i></a>
         </div>
@@ -161,8 +160,8 @@
       <div class="portfolio-box">
         <img src="./images/portfolio2.jpg" alt="">
         <div class="portfolio-layer">
-          <h4>Web Desgin</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
+          <h4 style="color:var(--bg-color);">Web Desgin</h4>
+          <p style="color:var(--bg-color);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
             nam.</p>
           <a href="#"><i class='bx bx-link-external'></i></a>
         </div>
@@ -171,8 +170,8 @@
       <div class="portfolio-box">
         <img src="./images/portfolio3.jpg" alt="">
         <div class="portfolio-layer">
-          <h4>Web Desgin</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
+          <h4 style="color:var(--bg-color);" >Web Desgin</h4>
+          <p style="color:var(--bg-color);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
             nam.</p>
           <a href="#"><i class='bx bx-link-external'></i></a>
         </div>
@@ -181,8 +180,8 @@
       <div class="portfolio-box">
         <img src="./images/portfolio4.jpg" alt="">
         <div class="portfolio-layer">
-          <h4>Web Desgin</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
+          <h4 style="color:var(--bg-color);">Web Desgin</h4>
+          <p style="color:var(--bg-color);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
             nam, placeat sit inventore sint dolor dignissimos adipisci totam tempore labore voluptas esse
             dolorum officia. Blanditiis, ab laudantium.</p>
           <a href="#"><i class='bx bx-link-external'></i></a>
@@ -192,8 +191,8 @@
       <div class="portfolio-box">
         <img src="./images/portfolio5.jpg" alt="">
         <div class="portfolio-layer">
-          <h4>Web Desgin</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
+          <h4 style="color:var(--bg-color);">Web Desgin</h4>
+          <p style="color:var(--bg-color);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
             nam, placeat sit inventore sint dolor dignissimos adipisci totam tempore labore voluptas esse
             dolorum officia. Blanditiis, ab laudantium.</p>
           <a href="#"><i class='bx bx-link-external'></i></a>
@@ -203,8 +202,8 @@
       <div class="portfolio-box">
         <img src="./images/portfolio6.jpg" alt="">
         <div class="portfolio-layer">
-          <h4>Web Desgin</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
+          <h4 style="color:var(--bg-color);" >Web Desgin</h4>
+          <p style="color:var(--bg-color);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima sapiente asperiores
             nam, placeat sit inventore sint dolor dignissimos adipisci totam tempore labore voluptas esse
             dolorum officia. Blanditiis, ab laudantium.</p>
           <a href="#"><i class='bx bx-link-external'></i></a>
@@ -213,8 +212,8 @@
 
     </div>
   </section>
-  <!-- contact section design -->
-  <section class="contact" id="contact">
+  <!-- contact section design --> <!--
+   <section class="contact" id="contact"> 
     <h2 class="heading">
       Contact <span>Me!</span>
     </h2>
@@ -230,8 +229,9 @@
       <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
       <input type="submit" value="Send Message" class="btn">
     </form>
-  </section>
-  <!-- footer section -->
+  </section> 
+  
+  <-- footer section -->
   <footer class="footer">
     <div class="footer-text">
       <p>Copyright &copy; 2023 <a href="http://www.Youngstr.online" style="color: antiquewhite;"><b>Youngstr</b></a> |
