--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -54,23 +54,58 @@
     --bg-color: #ffffff;
     --second-bg-color: #f1f1f1;
     --text-color: hsl(0, 0%, 11%);
-    --main-color: rgb(0, 174, 255);;
+    --main-color: rgb(7, 156, 255);;
 }
+
+
+
 
 html {
     font-size: 62.5%;
     overflow-x: hidden;
 }
 
+
+
 body {
-    background: var(--bg-color);
+
+    background: linear-gradient(315deg, #ffffff, #ffffff, #e1e1e1, #ffffff, #ffffff);
+    background-size: 1000% 1000%;
+
+    -webkit-animation: AnimationName 19s ease infinite;
+    -moz-animation: AnimationName 19s ease infinite;
+    -o-animation: AnimationName 19s ease infinite;
+    animation: AnimationName 19s ease infinite;
+    
     color: var(--text-color);
     cursor: none;
 }
 
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:1% 0%}
+    50%{background-position:99% 100%}
+    100%{background-position:1% 0%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:1% 0%}
+    50%{background-position:99% 100%}
+    100%{background-position:1% 0%}
+}
+@-o-keyframes AnimationName {
+    0%{background-position:1% 0%}
+    50%{background-position:99% 100%}
+    100%{background-position:1% 0%}
+}
+@keyframes AnimationName {
+    0%{background-position:1% 0%}
+    50%{background-position:99% 100%}
+    100%{background-position:1% 0%}
+}
+
 section {
     min-height: 100vh;
-    padding: 10rem 9% 2rem;
+    padding: 10rem 6% 2rem;
 }
 
 
@@ -83,9 +118,11 @@ section {
     width: 100%;
     padding: 2rem 9%;
     background: white;
+
     display: flex;
     justify-content: space-between;
     z-index: 100;
+    box-shadow: 0 0 3.5rem  rgb(212, 212, 212);;
 
 }
 
@@ -135,8 +172,8 @@ section {
 }
 
 .home-img img {
-    margin: auto;
     width: 60rem;
+    padding: 10rem 2rem 6%;
     animation: floatImage 4s ease-in-out infinite;
     align-items: center;
 
@@ -161,7 +198,7 @@ section {
 }
 
 .home-content h3:nth-of-type(2) {
-    margin-bottom: 2rem;
+   /*margin-bottom: 2rem; */
 }
 
 span {
@@ -179,7 +216,7 @@ span {
 }
 
 .home-content p {
-    padding: 30px 0;
+    padding: 35px 0;
     max-width: 800px;
     font-size: 1.9rem;
 }
@@ -190,19 +227,24 @@ span {
     align-items: center;
     width: 5rem;
     height: 5rem;
-    background: transparent;
-    border: .2rem solid var(--main-color);
+    
+    background: rgb(0,151,238);
+    background: linear-gradient(90deg, rgba(0,151,238,1) 0%, rgba(0,154,237,1) 50%, rgba(0,191,255,1) 100%);
+    
     border-radius: 50%;
     font-size: 2.5rem;
-    color: var(--main-color);
-    margin: 1rem 2.2rem 3rem 0;
+    color: var(--bg-color);
+    margin: 1rem 2.2rem 3rem 0; 
+    transition: box-shadow 0.5s ease;
+    transition: color 0.3s ease;
     transition: 0.5 ease;
+    
 }
 
 .social-media a:hover {
-    background: var(--main-color);
-    color: var(--second-bg-color);
-    box-shadow: 0 0 1rem var(--main-color);
+    background: var(--bg-color);
+    color: var(--main-color );
+    box-shadow: 0 0 2rem rgb(86, 188, 255);
 }
 
 /* Home end  */
@@ -213,31 +255,37 @@ span {
     background: rgb(0,151,238);
     background: linear-gradient(90deg, rgba(0,151,238,1) 0%, rgba(0,154,237,1) 50%, rgba(0,191,255,1) 100%);
     border-radius: 4rem;
-    box-shadow: 0 0 1rem var(--main-color);
+    box-shadow: none;
     font-size: 2rem;
-    color: var(--second-bg-color);
+    color: var(--bg-color);
     letter-spacing: .1rem;
     font-weight: 600;
+
     transition: 0.5 ease;
+    transition: color 0.5 ease;
+    transition: box-shadow 0.5s ease;
 }
 
 
-
-
 .btn:hover {
-    box-shadow: none;
+    box-shadow: 0 0 1.5rem rgb(86, 188, 255);; /* rgb(109, 196, 255); */
+    border-radius: 4rem;
+
 }
 
 .about {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
-    background: var(--second-bg-color);
+    gap: 3rem;
+
 }
 
 .about-img img {
-    width: 35vw;
+    
+    width: 30vw;
+
+    border-radius: 10%;
 }
 
 .heading {
@@ -270,23 +318,25 @@ span {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 5rem;
 }
 
 .services-container .services-box {
     flex: 1 1 30rem;
     background: transparent;
-    backdrop-filter: blur(15px);
     padding: 3rem 2rem 4rem;
-    border-radius: 2rem;
+    border-radius: 2.5rem;
     text-align: center;
-    border: .2rem solid var(--bg-color);
     transition: .5 ease;
+    
+    border: 0.3rem solid transparent;
+    transition: box-shadow 0.5s ease;
 }
 
 .services-container .services-box:hover {
-    border-color: var(--main-color);
+    border-color: transparent;
     transform: scale(1.02);
+    box-shadow: 0 0 3rem rgb(72, 182, 255);
 }
 
 .services-box i {
@@ -306,7 +356,8 @@ span {
 
 /* Portfolio  */
 .portfolio {
-    background-color: var(--second-bg-color);
+    background-color: transparent;
+    margin-bottom: 20rem;
 }
 
 .portfolio h2 {
@@ -379,7 +430,7 @@ span {
 
 .portfolio-layer a i {
     font-size: 2rem;
-    color: var(--second-bg-color);
+    color: var(--secon-bg-color);
 }
 
 .contact h2 {
@@ -421,6 +472,13 @@ span {
 .contact form .btn {
     margin-top: 2rem;
     cursor: pointer;
+}
+
+.gradient {
+    color: rgb(0,151,238);
+    color: linear-gradient(90deg, rgba(0,151,238,1) 0%, rgba(0,154,237,1) 50%, rgba(0,191,255,1) 100%);;
+
+
 }
 
 .footer {
@@ -512,6 +570,7 @@ span {
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
+        
     }
 
     .home{
@@ -538,6 +597,7 @@ span {
     .about img {
         width: 70vw;
         margin-top: 4rem;
+        
     }
     
     .services h2{
@@ -590,3 +650,5 @@ span {
     }
     
 }
+
+
